--- a/travelers_project/mainpage/templates/mainpage/index.html
+++ b/travelers_project/mainpage/templates/mainpage/index.html
@@ -3,104 +3,119 @@
 
 {% block content %}
 <div class="banner">
-			<div class="container">
-				<h1>Lorem Ipsum is simply dummy text</h1>
-				<p>excepteur sint occaecat cupidatat non proident</p>
-				<a href="#" class="here"> START HERE<i> </i></a>
-			</div>
+	<div class="container">
+		<h1>Lorem Ipsum is simply dummy text</h1>
+		<p>excepteur sint occaecat cupidatat non proident</p>
+		<a href="#" class="here"> START HERE<i> </i></a>
+	</div>
+</div>
+<!---->
+<div class="content">
+	<div class="container">
+		<div class=" content-top">
+				<div class="col-md-4 top-grid">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/s1.png' %}" alt=" "></a>
+					<h5>Curabitur justo</h5>
+					<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
+				</div>
+				<div class="col-md-4 top-grid">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/s2.png' %}" alt=" "></a>
+					<h5>Curabitur justo</h5>
+					<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
+				</div>
+				<div class="col-md-4 top-grid">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/s3.png' %}" alt=" "></a>
+					<h5>Curabitur justo</h5>
+					<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
+				</div>
+			<div class="clearfix"> </div>
 		</div>
-		<!---->
-		<div class="content">
-			<div class="container">
-				<div class=" content-top">
-						<div class="col-md-4 top-grid">
-							<a href="#"><img class="img-responsive" src="{% static 'images/s1.png' %}" alt=" "></a>
-							<h5>Curabitur justo</h5>
-							<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
-						</div>
-						<div class="col-md-4 top-grid">
-							<a href="#"><img class="img-responsive" src="{% static 'images/s2.png' %}" alt=" "></a>
-							<h5>Curabitur justo</h5>
-							<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
-						</div>
-						<div class="col-md-4 top-grid">
-							<a href="#"><img class="img-responsive" src="{% static 'images/s3.png' %}" alt=" "></a>
-							<h5>Curabitur justo</h5>
-							<p>Donec id velit feugiat, congue nunc non, iaculis neque. Vivamus nisl justo, finibus in interdum nec, iaculis non ongfdio lorem ipsum dolor sit amet.</p>
-						</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-			<!---->
-			<div class="content-middle">
+	</div>
+	<!---->
+	<div class="content-middle">
+		<div class="play">
+			<a class="play-icon popup-with-zoom-anim" href="#small-dialog">
+				<span> </span>
+			</a>
+			<!-- pop-up-box -->
+			<script type="text/javascript" src="{% static 'js/modernizr.custom.min.js' %}"></script>
+			<link href="{% static 'css/popuo-box.css' %}" rel="stylesheet" type="text/css" media="all" />
+			<script src="{% static 'js/jquery.magnific-popup.js' %}" type="text/javascript"></script>
 
-				<div class="video-bottom">
-					<!-- container -->
-					<div class="container">
-						<div class="col-md-6 content-left">
-							<h3>Donec id velit feugiat, congue neque.</h3>
-							<h6>Praesent ac dapibus lacus, condimentum commodo ligula</h6>
-							<p>Vivamus nisl justo, finibus in interdum nec, iaculis non odio.
-								Aliquam lacus tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris.
-								Cras suscipit cursus eros id tincidunt. Praesent ac dapibus lacus, condimentum commodo ligula.
-								tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris. Cras suscipit cursus eros
-							</p>
-						</div>
-						<div class="col-md-6 content-left">
-							<h3>Aliquam lacus tellus, tempus a rutrum.</h3>
-							<h6>Praesent ac dapibus lacus, condimentum commodo ligula</h6>
-							<p>Vivamus nisl justo, finibus in interdum nec, iaculis non odio.
-								Aliquam lacus tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris.
-								Cras suscipit cursus eros id tincidunt. Praesent ac dapibus lacus, condimentum commodo ligula.
-								tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris. Cras suscipit cursus eros
-							</p>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<!-- //container -->
-				</div>
+			<!--//pop-up-box -->
+			<div id="small-dialog" class="mfp-hide">
+				<iframe src="//player.vimeo.com/video/65062701"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>
-			<!---->
+			<script>
+				$(document).ready(function() {
+				$('.popup-with-zoom-anim').magnificPopup({
+					type: 'inline',
+					fixedContentPos: false,
+					fixedBgPos: true,
+					overflowY: 'auto',
+					closeBtnInside: true,
+					preloader: false,
+					midClick: true,
+					removalDelay: 300,
+					mainClass: 'my-mfp-zoom-in'
+				});
+
+				});
+			</script>
+		</div>
+		<div class="video-bottom">
 			<!-- container -->
 			<div class="container">
-				<div class="middle-top">
-				<h3>Recent Tour</h3>
-					<div class="brand">
-						<div class="col-md-3 fashion">
-							<a href="#"><img class="img-responsive" src="{% static 'images/pi.jpg' %}" alt="">
-							<p>Brand Project<i> </i></p></a>
-						</div>
-						<div class="col-md-3 fashion">
-							<a href="#"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
-							<p>Brand Project<i> </i></p></a>
-						</div>
-						<div class="col-md-3 fashion">
-							<a href="#"><img class="img-responsive" src="{% static 'images/pi2.jpg' %}" alt="">
-							<p>Brand Project<i> </i></p></a>
-
-						</div>
-						<div class="col-md-3 fashion">
-							<a href="#"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
-							<p>Brand Project<i> </i></p></a>
-						</div>
-							<div class="clearfix"> </div>
-						</div>
-
+				<div class="col-md-6 content-left">
+					<h3>Donec id velit feugiat, congue neque.</h3>
+					<h6>Praesent ac dapibus lacus, condimentum commodo ligula</h6>
+					<p>Vivamus nisl justo, finibus in interdum nec, iaculis non odio.
+						Aliquam lacus tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris.
+						Cras suscipit cursus eros id tincidunt. Praesent ac dapibus lacus, condimentum commodo ligula.
+						tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris. Cras suscipit cursus eros
+					</p>
 				</div>
+				<div class="col-md-6 content-left">
+					<h3>Aliquam lacus tellus, tempus a rutrum.</h3>
+					<h6>Praesent ac dapibus lacus, condimentum commodo ligula</h6>
+					<p>Vivamus nisl justo, finibus in interdum nec, iaculis non odio.
+						Aliquam lacus tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris.
+						Cras suscipit cursus eros id tincidunt. Praesent ac dapibus lacus, condimentum commodo ligula.
+						tellus, tempus a finibus ac, laoreet rutrum dui. Praesent ex nulla, sagittis imperdiet convallis a, tincidunt sit amet mauris. Cras suscipit cursus eros
+					</p>
+				</div>
+				<div class="clearfix"> </div>
 			</div>
-			<!---->
-			<div class="content-bottom">
-				<div class="container">
-					<h3>join our subscribers.</h3>
-					<p>Praesent ac dapibus lacus condimentum commodo ligula.</p>
-				<div class="submit">
-					<form>
-						<input type="text" value="Your email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your email address';}">
-						<input type="submit" value="Subscribe">
-						<div class="clearfix"> </div>
-					</form>
+			<!-- //container -->
+		</div>
+	</div>
+	<!---->
+	<!-- container -->
+	<div class="container">
+		<div class="middle-top">
+		<h3>Recent Tour</h3>
+			<div class="brand">
+				<div class="col-md-3 fashion">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi.jpg' %}" alt="">
+					<p>Brand Project<i> </i></p></a>
 				</div>
+				<div class="col-md-3 fashion">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
+					<p>Brand Project<i> </i></p></a>
 				</div>
-			</div>
+				<div class="col-md-3 fashion">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi2.jpg' %}" alt="">
+					<p>Brand Project<i> </i></p></a>
 
+				</div>
+				<div class="col-md-3 fashion">
+					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
+					<p>Brand Project<i> </i></p></a>
+				</div>
+					<div class="clearfix"> </div>
+				</div>
+
+		</div>
+	</div>
+</div>
 {% endblock %}
