--- a/travelers_project/mainpage/templates/mainpage/index.html
+++ b/travelers_project/mainpage/templates/mainpage/index.html
@@ -2,114 +2,114 @@
 {% load static %}
 
 {% block content %}
-{% with main_page|first as mainpage %}
-<div class="banner" style="background:url('{{ mainpage.main_banner.url }}') no-repeat center;width:100%;min-height:600px;background-size:cover;display:block;text-align: right;padding:14em 0 ;">
-	<div class="container">
-		<h1>{{ mainpage.big_description }}</h1>
-		<p>{{ mainpage.small_description }}</p>
-		<a href="#" class="here"> START HERE<i> </i></a>
-	</div>
-</div>
-<!---->
-<div class="content">
-	<div class="container">
-		<div class=" content-top">
-				<div class="col-md-4 top-grid">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/s1.png' %}" alt=" "></a>
-					<h5>{{ mainpage.left_small_tile_title }}</h5>
-					<p>{{ mainpage.left_small_tile_description }}</p>
-				</div>
-				<div class="col-md-4 top-grid">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/s2.png' %}" alt=" "></a>
-					<h5>{{ mainpage.center_small_tile_title }}</h5>
-					<p>{{ mainpage.center_small_tile_description }}</p>
-				</div>
-				<div class="col-md-4 top-grid">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/s3.png' %}" alt=" "></a>
-					<h5>{{ mainpage.right_small_tile_title }}</h5>
-					<p>{{ mainpage.right_small_tile_description }}</p>
-				</div>
-			<div class="clearfix"> </div>
+{% with main_page as mainpage %}
+	<div class="banner" style="background:url('{{ mainpage.main_banner.url }}') no-repeat center;width:100%;min-height:600px;background-size:cover;display:block;text-align: right;padding:14em 0 ;">
+		<div class="container">
+			<h1>{{ mainpage.big_description }}</h1>
+			<p>{{ mainpage.small_description }}</p>
+			<a href="#" class="here"> START HERE<i> </i></a>
 		</div>
 	</div>
 	<!---->
-	<div class="content-middle">
-		<div class="play" style="position: relative;background: url('{{ mainpage.video_picture.url }}') no-repeat 0px 0px;min-height: 265px;background-size: cover;">
-			<a class="play-icon popup-with-zoom-anim" href="#small-dialog">
-				<span> </span>
-			</a>
-			<!-- pop-up-box -->
-			<script type="text/javascript" src="{% static 'js/modernizr.custom.min.js' %}"></script>
-			<link href="{% static 'css/popuo-box.css' %}" rel="stylesheet" type="text/css" media="all" />
-			<script src="{% static 'js/jquery.magnific-popup.js' %}" type="text/javascript"></script>
-
-			<!--//pop-up-box -->
-			<div id="small-dialog" class="mfp-hide">
-				<iframe src="{{ mainpage.video_link }}"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			</div>
-			<script>
-				$(document).ready(function() {
-				$('.popup-with-zoom-anim').magnificPopup({
-					type: 'inline',
-					fixedContentPos: false,
-					fixedBgPos: true,
-					overflowY: 'auto',
-					closeBtnInside: true,
-					preloader: false,
-					midClick: true,
-					removalDelay: 300,
-					mainClass: 'my-mfp-zoom-in'
-				});
-
-				});
-			</script>
-		</div>
-		<div class="video-bottom">
-			<!-- container -->
-			<div class="container">
-				<div class="col-md-6 content-left">
-					<h3>{{ mainpage.left_big_tile_header }}</h3>
-					<h6>{{ mainpage.left_big_tile_title }}</h6>
-					<p>{{ mainpage.left_big_tile_description }}</p>
-				</div>
-				<div class="col-md-6 content-left">
-					<h3>{{ mainpage.right_big_tile_header }}</h3>
-					<h6>{{ mainpage.right_big_tile_title }}</h6>
-					<p>{{ mainpage.right_big_tile_description }}</p>
-				</div>
+	<div class="content">
+		<div class="container">
+			<div class=" content-top">
+					<div class="col-md-4 top-grid">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/s1.png' %}" alt=" "></a>
+						<h5>{{ mainpage.left_small_tile_title }}</h5>
+						<p>{{ mainpage.left_small_tile_description }}</p>
+					</div>
+					<div class="col-md-4 top-grid">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/s2.png' %}" alt=" "></a>
+						<h5>{{ mainpage.center_small_tile_title }}</h5>
+						<p>{{ mainpage.center_small_tile_description }}</p>
+					</div>
+					<div class="col-md-4 top-grid">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/s3.png' %}" alt=" "></a>
+						<h5>{{ mainpage.right_small_tile_title }}</h5>
+						<p>{{ mainpage.right_small_tile_description }}</p>
+					</div>
 				<div class="clearfix"> </div>
 			</div>
-			<!-- //container -->
 		</div>
-	</div>
-	<!---->
-	<!-- container -->
-	<div class="container">
-		<div class="middle-top">
-		<h3>Последние путешествия</h3>
-			<div class="brand">
-				<div class="col-md-3 fashion">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi.jpg' %}" alt="">
-					<p>Brand Project<i> </i></p></a>
-				</div>
-				<div class="col-md-3 fashion">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
-					<p>Brand Project<i> </i></p></a>
-				</div>
-				<div class="col-md-3 fashion">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi2.jpg' %}" alt="">
-					<p>Brand Project<i> </i></p></a>
+		<!---->
+		<div class="content-middle">
+			<div class="play" style="position: relative;background: url('{{ mainpage.video_picture.url }}') no-repeat 0px 0px;min-height: 265px;background-size: cover;">
+				<a class="play-icon popup-with-zoom-anim" href="#small-dialog">
+					<span> </span>
+				</a>
+				<!-- pop-up-box -->
+				<script type="text/javascript" src="{% static 'js/modernizr.custom.min.js' %}"></script>
+				<link href="{% static 'css/popuo-box.css' %}" rel="stylesheet" type="text/css" media="all" />
+				<script src="{% static 'js/jquery.magnific-popup.js' %}" type="text/javascript"></script>
 
+				<!--//pop-up-box -->
+				<div id="small-dialog" class="mfp-hide">
+					<iframe src="{{ mainpage.video_link }}"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
-				<div class="col-md-3 fashion">
-					<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
-					<p>Brand Project<i> </i></p></a>
-				</div>
+				<script>
+					$(document).ready(function() {
+					$('.popup-with-zoom-anim').magnificPopup({
+						type: 'inline',
+						fixedContentPos: false,
+						fixedBgPos: true,
+						overflowY: 'auto',
+						closeBtnInside: true,
+						preloader: false,
+						midClick: true,
+						removalDelay: 300,
+						mainClass: 'my-mfp-zoom-in'
+					});
+
+					});
+				</script>
+			</div>
+			<div class="video-bottom">
+				<!-- container -->
+				<div class="container">
+					<div class="col-md-6 content-left">
+						<h3>{{ mainpage.left_big_tile_header }}</h3>
+						<h6>{{ mainpage.left_big_tile_title }}</h6>
+						<p>{{ mainpage.left_big_tile_description }}</p>
+					</div>
+					<div class="col-md-6 content-left">
+						<h3>{{ mainpage.right_big_tile_header }}</h3>
+						<h6>{{ mainpage.right_big_tile_title }}</h6>
+						<p>{{ mainpage.right_big_tile_description }}</p>
+					</div>
 					<div class="clearfix"> </div>
 				</div>
+				<!-- //container -->
+			</div>
+		</div>
+		<!---->
+		<!-- container -->
+		<div class="container">
+			<div class="middle-top">
+			<h3>Последние путешествия</h3>
+				<div class="brand">
+					<div class="col-md-3 fashion">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/pi.jpg' %}" alt="">
+						<p>Brand Project<i> </i></p></a>
+					</div>
+					<div class="col-md-3 fashion">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
+						<p>Brand Project<i> </i></p></a>
+					</div>
+					<div class="col-md-3 fashion">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/pi2.jpg' %}" alt="">
+						<p>Brand Project<i> </i></p></a>
 
+					</div>
+					<div class="col-md-3 fashion">
+						<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
+						<p>Brand Project<i> </i></p></a>
+					</div>
+						<div class="clearfix"> </div>
+					</div>
+
+			</div>
 		</div>
 	</div>
-</div>
 {% endwith %}
 {% endblock %}
