--- a/travelers_project/trips/templates/trips/trips.html
+++ b/travelers_project/trips/templates/trips/trips.html
@@ -14,7 +14,9 @@
                     <h3>{{ trip.start_date|date:"d/m/Y" }} - {{ trip.end_date|date:"d/m/Y" }}</h3>
                 </div>
                 <div class="panel-body">
-                    <h2>{{ trip.title }}</h2>
+                    <a href="{% url url_name pk=trip.pk %}">
+                        <h2>{{ trip.title }}</h2>
+                    </a>
                     <p>{{ trip.description|truncatechars:80 }}</p>
                 </div>
             </div>
