--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -176,10 +176,9 @@ form.example::after {
 <div class="content-bottom-in">
     <div class="container">
         <ul class="social">
-            <li><a href="#"><i> </i></a></li>
-            <li><a href="#"><i class="twitter"> </i></a></li>
-            <li><a href="#"><i class="dribble"> </i></a></li>
-            <li><a href="#"><i class="gmail"> </i></a></li>
+            <li><a href="{{ social_urls.left_social_url}}"><i> </i></a></li>
+            <li><a href="{{ social_urls.center_social_url}}"><i class="vk"> </i></a></li>
+            <li><a href="{{ social_urls.right_social_url}}"><i class="instagram"> </i></a></li>
         </ul>
     </div>
 </div>
