statistics about completed trips and travelers was added

--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -189,10 +189,10 @@ form.example::after {
         <div class="footer-top">
             <div class="col-md-3 amet-sed">
                 <h4>Местоположение</h4>
-                <p>Россия</p>
-                <p>Санкт-Петербург </p>
-                <p>(213) 748-2411</p>
-                <a href="#">Посмотреть на карте<i> </i></a>
+                <p>Беларусь, Минск</p>
+                <p>Путешественников - <b>{{num_of_travelers}}</b></p>
+                <p>Завершенных путешествий - <b>{{num_of_completed_trips}}</b></p>
+
             </div>
             <div class="col-md-3 amet-sed ">
                 <h4>Компания</h4>
