--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -187,36 +187,20 @@ form.example::after {
 <div class="footer">
     <div class="container">
         <div class="footer-top">
-            <div class="col-md-3 amet-sed">
-                <h4>Местоположение</h4>
-                <p>Беларусь, Минск</p>
+            <div class="col-md-6 amet-sed">
+                <h4>Контакты</h4>
+                <p>Победителей 7А, Минск, Беларусь</p>
+                <p>Phone: +375 (33) 444-44-44</p>
+                <p>Email: <a href="mailto:russiantravel.net@yandex.ru">russiantravel.net@yandex.ru</a></p>
+            </div>
+
+
+            <div class="col-md-6 amet-sed ">
+                <h4>Путешествия</h4>
                 <p>Путешественников - <b>{{num_of_travelers}}</b></p>
                 <p>Завершенных путешествий - <b>{{num_of_completed_trips}}</b></p>
-
-            </div>
-            <div class="col-md-3 amet-sed ">
-                <h4>Компания</h4>
-
-                <ul class="nav-bottom">
-                    <li><a href="story.html">Наша история</a></li>
-                    <li><a href="#">Миссия</a></li>
-                    <li><a href="404.html">Журнал </a></li>
-                    <li><a href="#">Карьера </a></li>
-                </ul>
-            </div>
-            <div class="col-md-3 amet-sed ">
-                <h4>Поддержка</h4>
-                <ul class="nav-bottom">
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="contact.html">Наши контакты</a></li>
-                    <li><a href="#">Политики</a></li>
-
-                </ul>
-            </div>
-            <div class="col-md-3 amet-sed ">
-                <h4>Путешествия</h4>
                 <p>"Путешествовать необходимо тем, кто учится", - Марк Твен </p>
-                <p class="footer-class">Copyright © 2019</p>
+                <p class="footer-class">Copyright © 2020</p>
             </div>
             <div class="clearfix"></div>
         </div>
