--- a/travelers_project/trips/templates/trips/trip_detail.html
+++ b/travelers_project/trips/templates/trips/trip_detail.html
@@ -16,7 +16,7 @@
     <br>
     <h3>{{object.route}}</h3>
     <br>
-    <h3>Когда: с {{ object.start_date|date:"d/m/Y" }} по {{ object.end_date|date:"d/m/Y" }}</h3>
+    <h3>Когда: с {{ object.start_date|date:"j E Y" }} по {{ object.end_date|date:"j E Y" }}</h3>
     <br>
     <h3>Участники:</h3>
     <div class="container">
