contact link was fixed

--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -192,6 +192,7 @@ form.example::after {
                 <p>Победителей 7А, Минск, Беларусь</p>
                 <p>Phone: +375 (33) 444-44-44</p>
                 <p>Email: <a href="mailto:russiantravel.net@yandex.ru">russiantravel.net@yandex.ru</a></p>
+                <a href="{% url 'feedback_url' %}">По всем вопросам</a>
             </div>
 
 
