--- a/travelers_project/templates/base.html
+++ b/travelers_project/templates/base.html
@@ -9,6 +9,7 @@
         Карта путешествий по городам и регионам | Andersen
       {% endblock title %}
     </title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all"/>
